Fix index page layout on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -141,6 +141,12 @@ h6 { font-size: 1rem; }
 	}
 }
 
+@media (max-width: 768px) {
+	.btn {
+		padding: 1em 2em;
+	}
+}
+
 /* [FAQ] */
 
 .faq {
